Ch11/gatekeeper-metrics-servicemonitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatekeeper
  namespace: gatekeeper-system
  labels:
    app: gatekeeper
spec:
  ports:
    - name: metrics
      port: 8888
      targetPort: 8888
      protocol: TCP
  selector:
    app: gatekeeper
